--- a/sass/css/_sidebar.scss
+++ b/sass/css/_sidebar.scss
@@ -8,7 +8,7 @@
 	border-right: 1px solid $separatorColor;
 	height: 100%;
 	background-color: white;
-	overflow-y: scroll;
+	overflow-y: auto;
 
 	ul {
 		margin: 0;
